--- a/templates/footer.html
+++ b/templates/footer.html
@@ -15,7 +15,7 @@
         <li><a href="" title="Book Airport Transfers and Transportation Services">Transfers</a></li>
         <li><a href="{% url 'excursions' %}" title="Exciting Excursions and Tours in Punta Cana">Excursions</a></li>
         <li><a href="{% url 'static_page' 'events' %}" title="Special Events in Punta Cana">Events</a></li>
-        <li><a href="{% url 'static_page' 'blog' %}" title="Read Punta Cana Travel Tips and Blog Posts">Blog</a></li>
+        <li><a href="{% url 'blog_post_list' %}" title="Read Punta Cana Travel Tips and Blog Posts">Blog</a></li>
         <li><a href="{% url 'static_page' 'faqs' %}" title="Frequently Asked Questions about Punta Cana Discovery">FAQs</a></li>
       </ul>
     </div>
